# PaintEstimatorPY

./: main.py  pyproject.toml
static/css/: styles.css
templates/: base.html  index.html
