[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Stephanie Thompson <thompson.stephanie84@gmail.com>"]
description = ""
name = "paintestimator"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^1.1"
python = "^3.7"
[tool.poetry.dev-dependencies]
